# tributary

./: .gitignore  LICENSE  README.md  evaluate.py  model.py  public.asc  pyproject.toml  submissions.yaml
.github/workflows/: run-model.yml
data/: test.csv.asc  train.csv
